# clang-tidy-plugin

./: CMakeLists.txt  README.md  plugin.cpp
src/: plugin.cpp
src/checks/: AtomicOnlyCheck.cpp  AtomicOnlyCheck.h  GlobalPrefixCheck.cpp  GlobalPrefixCheck.h  HeaderNamespaceCheck.cpp  HeaderNamespaceCheck.h
